# home-energy-planner

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml  skills-lock.json
.agents/agents/: issue-implementer.md  wave-runner.md
.agents/commands/: implement-issues.md
.claude/agents/: issue-implementer.md  wave-runner.md
.claude/commands/: implement-issues.md
.scratch/battery-review-fixes/: PRD.md  implementation_report.md
.scratch/home-battery/: PRD.md  implementation_report.md
aerogrid/: __init__.py  behavioral_predictor.py  commit.py  config.py  graph.py  hitl_policy.py  logging_config.py  optimizer.py  price_oracle.py  signal_watcher.py  state.py  triggers.py  types.py  vi_features.py
aerogrid/nilm/: __init__.py  disaggregator.py  model.py  train.py  (+1 more)
notebooks/: 01_explore_scenario.ipynb  01_explore_ukdale.ipynb  02_disaggregator.ipynb  02_signal_watcher.ipynb  03_price_oracle.ipynb  04_behavioral_predictor.ipynb  05_optimizer.ipynb  06_end_to_end.ipynb  07_intervention_demo.ipynb  07_intervention_what_if_cost_impact.ipynb  08_behavioral_predictor_low_level.ipynb
scripts/: _build_optimizer_notebook.py  _common.py  _gen_readme_images.py  build_notebooks.py  build_signatures.py  fetch_entsoe_prices.py  fetch_nyiso_prices.py  fetch_smard_prices.py  fetch_ukdale_subset.py  generate_scenario.py
tests/: test_appliance_models.py  test_base_load.py  test_commit.py  test_disaggregator.py  test_graph.py  test_hitl_policy.py  test_integration.py  test_optimizer.py  test_scenario.py  test_signal_watcher.py  test_triggers.py
(+21 files in other folders)
