[project]
name = "aerogrid"
version = "0.1.0"
description = "AeroGrid: Proactive Multi-Agent Home Energy Planner"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.12",
    "pyarrow>=15.0",
    "cvxpy>=1.5",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "tqdm>=4.66",
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-core>=0.3",
]

[project.optional-dependencies]
forecast = [
    "chronos-forecasting>=1.4",
    "torch>=2.2",
]
eu = [
    "entsoe-py>=0.6",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "jupyterlab>=4.0",
    "ipywidgets>=8.1",
    "ipympl>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aerogrid"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
